# ProyectoPythonUCR

./: .gitignore  .pypirc  .readthedocs.yaml  LICENSE  Readme.md  main.py  pyproject.toml  requirements.txt
docs/source/: ImgGrayMailJCWUCR.rst  conf.py  index.rst  modules.rst
src/ImgGrayMailJCWUCR/: imagenes.py  mymail.py
